[metadata]
name=cytubebot

[options]
python_requires=>=3.10

[flake8]
max-line-length=120

# https://pylint.pycqa.org/en/latest/user_guide/configuration/all-options.html
[pylint]
; C0111: Missing docstring
; C0114: Missing module docstring
; C0115: Missing class docstring
; C0116: Missing function or method docstring
; W0511: TODO in comment
disable=C0111,C0114,C0115,C0116,W0511

# Ignore blackjack while it is a WIP
ignore-paths=cytubebot/blackjack/

logging-format-style=new

fail-under=8

[pylint.FORMAT]
max-line-length=120
